PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_9-2_var_void/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:10: error: variable or field ‘x’ declared void
    4 |     void x;
      |          ^
input.c:5:12: warning: ‘return’ with a value, in function returning void
    5 |     return x;
      |            ^
input.c:3:6: note: declared here
    3 | void main() {
      |      ^~~~

return code: 1
